# tree-sitter.mbt

./: .gitignore  .gitmodules  README.md  moon.mod.json  package-lock.json  package.json
docs/pattern/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
docs/pattern/bindings/c/: tree-sitter-pattern.pc.in
docs/pattern/bindings/go/: binding.go  binding_test.go
docs/pattern/bindings/node/: binding.cc  index.js
docs/pattern/bindings/python/tests/: test_binding.py
docs/pattern/bindings/python/tree_sitter_pattern/: __init__.py  binding.c
docs/pattern/bindings/rust/: build.rs  lib.rs
docs/pattern/bindings/swift/TreeSitterPattern/: pattern.h
docs/pattern/bindings/swift/TreeSitterPatternTests/: TreeSitterPatternTests.swift
docs/pattern/src/: grammar.json  node-types.json  parser.c
scripts/: generate.py  prepare.py  publish.py  test.py
src/: .gitignore  closure.mbt  edit_test.mbt  grammar.mbt  init.js.mbt  input.js.mbt  input.mbt  input.native.mbt  input_test.mbt  language.js.mbt  language.mbt  language.native.mbt  language_test.mbt  lookahead_iterator.js.mbt  lookahead_iterator.mbt  lookahead_iterator.native.mbt  lookahead_iterator_test.mbt  moon.pkg.json  node.js.mbt  node.mbt  node.native.mbt  node_test.mbt  node_types.mbt  nullable.mbt  parse_test.mbt  parser.js.mbt  parser.mbt  parser.native.mbt  parser_test.mbt  pattern_test.mbt  point.js.mbt  point.mbt  point.native.mbt  preprocess.py  query.js.mbt  query.mbt  query.native.mbt  (+21 more)
(+165 files in other folders)
